# solar-station

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  qdrant_crud.rs  qdrant_routes.rs  user_profile.rs
src/assets/: funding.rs  mod.rs  smart_contract.rs  transactions.rs  wallet.rs
src/ui/: mod.rs
src/user_profile/: db.rs  handlers.rs  mod.rs  profile.rs  qdrant_integrations.rs
tests/: crud_tests.rs  insert_vector_tests.rs  profile_tests.rs  test.rs  transaction_tests.rs  wallet_tests.rs
