[package]
name = "solarpunk"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio = { version = "1.18", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
axum = { version = "0.7.7", features = ["macros"] }
axum-server = "0.7.1"
ratatui = "0.29.0" 
crossterm = "0.28.1" 
tui = { version = "0.19", features = ["crossterm"] }
neo4j = "0.1.0" 
qdrant-client = "1.12.1" 
aes = "0.8.4" 
hex = "0.4" 
hex-literal = "0.4.1"    
rand = "0.8"   
ethers = { version = "2.0.14", features = ["abigen"] }
k256 = "0.13"
regex = "1.5"
cbc = "0.1.2"
block-padding = "0.3.3"


[[bin]]
name = "solarpunk"
path = "src/main.rs"

[lib]
name = "solarpunk"
path = "src/lib.rs"